# coding-playground

./: .gitignore  README.md  test.txt
eclipse-workspace/playground/: notes  test.txt
playground arduino/: main.ino
playground arduino/DS3231Setup/: DS3231Setup.ino  SendTime.bat  Tutorial.txt
playground arduino/main/: main.ino  setDS3231Time.h  test.h
playground c++/: CMakeLists.txt  ShitShuffler.cpp  input.cpp  main.cpp  pointers.cpp  select.cpp  test.cpp  test.h  testnerd.cpp  timer.h  vectorsTest.cpp
playground c++/rad/: ShitShuffler.cpp  collatz.cpp  input.cpp  note.txt  pointers.cpp  test.cpp  test.h  timer.h
playground java/src/: Main.java  Select.java  main.java
playground js/: test.html  test.js
playground js/JSFuck Obfuscation/: obfuscator  obfuscator.js  output.js
playground python/: main.py  textbox.py
playground python/ChatGPt/: chat.py  config.json
playground python/jupyter/: test.ipynb
playground python/main/: codeHS_jump.py  pip.py
playground python/pygame/: test.py
playground python/rad/: ShitShuffler.py  (+4 more)
playground_rust/: Cargo.toml
playground_rust/src/: main.rs  test.rs  timer.rs
playground_rust/src/aoc2022/: d1.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  input_parse.rs  mod.rs
playground_rust/src/aoc2022/inputs/: d5_ex.txt  d5_full.txt  dummy.txt
playground_rust/src/rad/: ShitShuffler.rs  collatz.rs  egui.rs  input.rs  mod.rs  pointers.rs  printp.rs  shit_shuffler.rs  string_random.rs  test.rs  text_io_readf.rs  tictactoe.rs  timer.rs
playground_rust/src/rad/egui/: egui_test.rs  mod.rs  shit_shuffler.rs  test.rs
(+53 files in other folders)
