[package]
name = "playground_rust"
version = "0.1.0-irreleventSemanticVersioning.69420" 
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# random
text_io = "0.1.10"
rand = "0.8.5"
num2words = "0.4.0"
console = "0.15.1"
open = "3.0.2"
egui = "0.19.0"
eframe = "0.19.0"